2005-09-09  Sebastian Pop  <pop@cri.ensmp.fr>

	* Makefile.in (tree-chrec.o): Depends on SCEV_H.
	* tree-chrec.c: Include tree-scalar-evolution.h.
	(chrec_convert): Instantiate the base and step before calling
	scev_probably_wraps_p that would fail on parametric evolutions.
	Collect all the fails into a single section failed_to_convert,
	print a diagnostic, and return chrec_dont_know instead of calling
	fold_convert.
	* tree-scalar-evolution.c (loop_closed_phi_def): New.
	(instantiate_parameters_1): Avoid instantiation of loop closed ssa
	phi nodes.
	(scev_const_prop): Don't replace the definition of a loop closed ssa
	phi node by itself, or by another loop closed ssa phi node.
	* tree-ssa-loop-niter.c (scev_probably_wraps_p, convert_step): Check
	that base and step are defined.

2005-09-09  Richard Guenther  <rguenther@suse.de>

	PR c++/23624
	* fold-const.c (fold_ternary): Check truth_value_p before
	calling invert_truthvalue.

2005-09-09  Nick Clifton  <nickc@redhat.com>

	* Makefile.in (LIBGCC_DEPS): Add libgcc2.h.
	* libgcc2.c (__clz_tab[], __popcount_tab[]): Set the fixed
	dimension of these arrays.
	* libgcc2.h (__clz_tab[], __popcount_tab[]): Add exports of
	these arrays.
	* longlong.h: Only provide a prototype for the __clz_tab[] array
	if this header has not been included from libgcc2.h.
	* config/stormy16/stormy16-lib2.c: Include libgcc2.h rather than
	defining own types.
	Provide prototypes for exported functions.
	Use the __clz_tab[] and __popcount_tab[] arrays provided by
	libgcc2.c.

2005-09-08  Josh Conner  <jconner@apple.com>

	PR c++/23180
	* expr.c (expand_expr_addr_expr_1): Don't invoke
	expand_simple_binop for EXPAND_INITIALIZER.

2005-09-08  Richard Henderson  <rth@redhat.com>

	PR debug/23190
	* toplev.c (wrapup_global_declaration_1): Split out ...
	(wrapup_global_declaration_2): ... from ...
	(wrapup_global_declarations): ... here.  Return bool.
	(check_global_declaration_1): Split out ...
	(check_global_declarations): from here.